# rust-llm-rag

./: .gitignore  Cargo.toml  README.md  Setting.toml
docs/: tangv1.txt
modelfile/: TangV1ModelFile
qdrant_storage/: raft_state.json
src/: lib.rs  main.rs
src/infrastructure/: mod.rs  vector_db.rs
src/llm/: errors.rs  handler.rs  handlers.rs  mod.rs  model.rs  usecase.rs  usecases.rs
src/llm/usecase/: doc_reading.rs  errors.rs  mod.rs  prompt_adding.rs
src/setting/: setting.rs
src/startup/: setting.rs
